2011-08-03  Philippe Normand  <pnormand@igalia.com>

        [webkitpy] missing log import in common/net/resultsjsonparser.py
        https://bugs.webkit.org/show_bug.cgi?id=65606

        Reviewed by Martin Robinson.

        * Scripts/webkitpy/common/net/resultsjsonparser.py: Import the logging module.

2011-08-30  Philippe Normand  <pnormand@igalia.com>

        [stylechecker] complains about NULL usage in some gst_structure_ calls
        https://bugs.webkit.org/show_bug.cgi?id=67194

        Reviewed by Martin Robinson.

        Don't warn about NULL in some gst_structure_ calls. 0 can't be
        used for these, a proper sentinel is required.

        * Scripts/webkitpy/style/checkers/cpp.py:
        * Scripts/webkitpy/style/checkers/cpp_unittest.py:

2011-08-30  Adam Barth  <abarth@webkit.org>

        Remove old-style UI from garden-o-matic
        https://bugs.webkit.org/show_bug.cgi?id=67257

        Reviewed by Dimitri Glazkov.

        This code is nowhere near as awesome as the new hotness.  Let's remove
        it so it doesn't weigh us down.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/garden-o-matic.html: Removed.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/main.js: Removed.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui_unittests.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/unexpected-passes.js: Removed.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/unexpected-passes.html: Removed.

2011-08-30  Takashi Toyoshima  <toyoshim@chromium.org>

        [WebSocket] update pywebsocket to 0.6b5.
        https://bugs.webkit.org/show_bug.cgi?id=66924

        Reviewed by Kent Tamura.

        pywebsocket 0.6b2 supported minimum features of Hybi-08 specification.